--- a/block_functions/0x00.md
+++ b/block_functions/0x00.md
@@ -117,8 +117,6 @@ typedef struct {
 
 ---
 
-Жду команды **"да"**, чтобы прислать блок **0.2 — Конфигурация ядра**.
-
 Вот следующая часть:
 
 ---
@@ -199,8 +197,6 @@ typedef struct {
 * `test_config_safety_invalid_file`
 
 ---
-
-Готов прислать **блок 0.3 — Загрузка модулей (init modules)** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -284,8 +280,6 @@ typedef struct {
 
 ---
 
-Готов отправить **блок 0.4 — CLI интерфейс** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -366,8 +360,6 @@ typedef struct {
 * `test_cli_interactive_prompt`
 
 ---
-
-Готов прислать следующий блок: **0.5 — Контроллер запуска и завершения** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -457,8 +449,6 @@ typedef struct {
 
 ---
 
-Готов прислать следующий блок: **0.6 — Инициализация компонентов ядра** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -542,8 +532,6 @@ typedef struct {
 
 ---
 
-Готов прислать следующий блок: **0.7 — Регистрация и маршрутизация API** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -626,8 +614,6 @@ typedef struct {
 
 ---
 
-Готов прислать следующий блок: **0.8 — Инициализация observability-инфраструктуры** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -707,8 +693,6 @@ typedef struct {
 * `test_tracing_integration`
 
 ---
-
-Готов прислать следующий блок: **0.9 — Инициализация системных потоков** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -794,8 +778,6 @@ typedef struct {
 * `test_thread_registry_limit`
 
 ---
-
-Готов прислать следующий блок: **0.10 — Проверка совместимости (версия, ABI и т.д.)** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -959,9 +941,6 @@ typedef struct {
 
 ---
 
-Пакет 0 завершён ✅
-Готов перейти к следующему — **Пакет 1 — Архитектура и Хранилище**, начиная с блока **1.1 — Row-store движок**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -1052,8 +1031,6 @@ typedef struct {
 * `test_row_malformed_input`
 
 ---
-
-Готов продолжить с блока **1.2 — Column-store движок** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -1148,8 +1125,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.3 — JSON store движок** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -1242,8 +1217,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.4 — NUMA-aware аллокатор и CPU-affinity** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -1326,8 +1299,6 @@ typedef struct {
 * `test_numa_locality_balance`
 
 ---
-
-Готов продолжить с блока **1.5 — Поддержка форматов PAX / Apache Arrow** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -1419,8 +1390,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.6 — Поддержка frame-of-reference / векторного сжатия** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -1499,8 +1468,6 @@ typedef struct {
 * `test_for_zero_delta_block`
 
 ---
-
-Готов продолжить с блока **1.7 — Сжатие: dictionary, delta, RLE** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -1599,8 +1566,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.8 — Индексация: B+ Tree** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -1689,8 +1654,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.9 — Индексация: Hash Index** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -1776,8 +1739,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.10 — Индексация: Bitmap Index** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -1861,8 +1822,6 @@ typedef struct {
 * `test_bitmap_overflow_protection`
 
 ---
-
-Готов продолжить с блока **1.11 — Индексация: Inverted Index** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -1948,8 +1907,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.12 — Индексация: Adaptive Indexing** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -2034,8 +1991,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.13 — TTL, Eviction, Auto-tiering** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -2118,8 +2073,6 @@ typedef struct {
 * `test_eviction_mvcc_consistency`
 
 ---
-
-Готов продолжить с блока **1.14 — Авто ребалансировка и распределение (sharding, partitioning, planner)** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -2210,8 +2163,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.15 — Поддержка системной версии (AS OF)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -2298,8 +2249,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.16 — Поддержка большого объёма памяти (NUMA-оптимизация)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -2379,8 +2328,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.17 — Ограничения по CPU/IOPS/Memory (multi-tenant)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -2458,8 +2405,6 @@ typedef struct {
 * `test_iops_throttling_behavior`
 
 ---
-
-Готов продолжить с блока **1.18 — Буферный пул и Page Cache** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -2548,8 +2493,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.19 — WAL (write-ahead logging)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -2637,8 +2580,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.20 — Snapshot-система** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -2716,8 +2657,6 @@ typedef struct {
 * `test_snapshot_dirty_page_tracking`
 
 ---
-
-Готов продолжить с блока **1.21 — Файловая система и low-level storage API** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -2797,8 +2736,6 @@ typedef struct {
 * `test_storage_permission_safety`
 
 ---
-
-Готов продолжить с блока **1.22 — Горячие и холодные данные, temperature tracking** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -2885,8 +2822,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **1.23 — Поддержка TTL и retention политики** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -2971,8 +2906,6 @@ typedef struct {
 * `test_retention_metrics_consistency`
 
 ---
-
-Готов продолжить с блока **1.24 — LRU / ARC eviction алгоритмы** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -3063,8 +2996,6 @@ typedef struct {
 * `test_eviction_pinned_object_protection`
 
 ---
-
-Готов продолжить с блока **1.25 — Движок хранения таблиц** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -3235,10 +3166,6 @@ typedef enum {
 
 ---
 
-✅ Пакет **1. Архитектура и Хранилище** завершён.
-
-Готов перейти к следующему пакету — **2. Транзакционность и Надёжность**, начиная с **2.1 — MVCC (Compressed Chains + Snapshot Isolation)**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -3331,8 +3258,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **2.2 — Управление транзакциями (TX Manager)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -3423,8 +3348,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **2.3 — Журнал транзакций (WAL TX Layer)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -3504,8 +3427,6 @@ typedef struct {
 * `test_wal_tx_concurrent_transactions`
 
 ---
-
-Готов продолжить с блока **2.4 — Уровни изоляции (RC, RR, SI, SERIALIZABLE)** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -3593,8 +3514,6 @@ typedef enum {
 
 ---
 
-Готов продолжить с блока **2.5 — Управление snapshot'ами** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -3672,8 +3591,6 @@ typedef struct {
 * `test_snapshot_isolation_enforcement`
 
 ---
-
-Готов продолжить с блока **2.6 — Система rollback/undo логов** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -3758,8 +3675,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **2.7 — Поддержка savepoint / rollback-to** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -3842,8 +3757,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **2.8 — GC / Vacuum / очистка версий** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -3921,8 +3834,6 @@ typedef struct {
 * `test_gc_transaction_end_notification`
 
 ---
-
-Готов продолжить с блока **2.9 — Управление зависимостями транзакций (conflict graph)** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -4007,8 +3918,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **2.10 — Сериализуемость / fallback к SERIALIZABLE** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -4087,8 +3996,6 @@ typedef struct {
 * `test_serializable_fallback_success`
 
 ---
-
-Готов продолжить с блока **2.11 — Повтор транзакций и защита от конфликтов** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -4171,8 +4078,6 @@ typedef bool (*tx_fn_t)(tx_ctx_t *tx, void *ctx);
 
 ---
 
-Готов продолжить с блока **2.12 — Контроль согласованности транзакций (Consistency Validator)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -4253,8 +4158,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **2.13 — Мгновенное восстановление и Point-in-Time Recovery** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -4333,8 +4236,6 @@ typedef struct {
 * `test_pit_integrity_validation_errors`
 
 ---
-
-Готов продолжить с блока **2.14 — Crash Recovery (восстановление после сбоев)** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -4416,8 +4317,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **2.15 — WAL-based backup и репликация** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -4496,10 +4395,6 @@ typedef struct {
 * `test_wal_stream_corruption_handling`
 
 ---
-
-✅ Пакет **2. Транзакционность и Надёжность** завершён.
-
-Готов перейти к следующему пакету — **3. SQL и Языки**, начиная с блока **3.1 — Парсер SQL (ANSI 2011+)**. Напиши **"да"**.
 
 Вот следующая часть:
 
@@ -4584,8 +4479,6 @@ typedef struct {
 * `test_sql_parse_invalid_error_handling`
 
 ---
-
-Готов продолжить с блока **3.2 — AST дерево и структуры выражений** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -4684,8 +4577,6 @@ typedef struct ast_node_t {
 
 ---
 
-Готов продолжить с блока **3.3 — Поддержка оконных функций** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -4773,8 +4664,6 @@ typedef struct {
 * `test_window_custom_function_registration`
 
 ---
-
-Готов продолжить с блока **3.4 — Поддержка FILTER, MERGE, LATERAL, JSON функций** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -4866,8 +4755,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **3.5 — Оптимизатор SQL (Cost-based + Rule-based)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -4958,8 +4845,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **3.6 — Rule Rewriter / Pushdown Engine** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -5040,8 +4925,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **3.7 — Планировщик SQL-плана (Planner)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -5121,8 +5004,6 @@ typedef struct {
 * `test_planner_finalize_physical_correctness`
 
 ---
-
-Готов продолжить с блока **3.8 — Генерация IR и дерева операторов SQL** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -5218,8 +5099,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **3.9 — Генерация плана UPDATE, DELETE, INSERT** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -5299,8 +5178,6 @@ typedef struct {
 * `test_dml_upsert_conflict_resolution`
 
 ---
-
-Готов продолжить с блока **3.10 — Поддержка процедур и пользовательских транзакций (DSL)** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -5385,8 +5262,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **3.11 — Выполнение вложенных запросов и CTE** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -5469,8 +5344,6 @@ typedef struct {
 * `test_subquery_correlation_and_bind`
 
 ---
-
-Готов продолжить с блока **3.12 — SQL Executor: интерпретация и исполнение плана** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -5559,8 +5432,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **3.13 — Скалярные и агрегатные функции SQL** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -5645,8 +5516,6 @@ typedef struct {
 * `test_sql_fn_register_and_invoke_custom`
 
 ---
-
-Готов продолжить с блока **3.14 — SQL триггеры и exec hooks** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -5737,8 +5606,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **3.15 — Аналитические функции, ранжирование, percentiles** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -5821,10 +5688,6 @@ typedef struct {
 * `test_analytics_invalid_type_handling`
 
 ---
-
-✅ Пакет **3. SQL и Языки** завершён.
-
-Готов перейти к следующему пакету — **4. Интерфейсы и Интеграции**, начиная с блока **4.1 — JDBC, ODBC и CLI интерфейс**. Напиши **"да"**.
 
 Вот следующая часть:
 
@@ -5911,8 +5774,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **4.2 — REST и GraphQL API** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -5998,8 +5859,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **4.3 — gRPC / Streaming Replication Protocol** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -6084,8 +5943,6 @@ typedef struct {
 * `test_grpc_network_reconnect_and_resume`
 
 ---
-
-Готов продолжить с блока **4.4 — OpenAPI и схема introspection** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -6173,8 +6030,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **4.5 — API управления схемой (Schema Registry)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -6260,8 +6115,6 @@ typedef struct {
 * `test_schema_reversible_alter_and_rollback`
 
 ---
-
-Готов продолжить с блока **4.6 — Асинхронные Webhook-и и события** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -6349,8 +6202,6 @@ typedef struct {
 * `test_webhook_unregistration_cleanup`
 
 ---
-
-Готов продолжить с блока **4.7 — HTTP/2 маршрутизатор и роутинг запросов** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -6440,8 +6291,6 @@ typedef bool (*http_middleware_t)(http_request_t *req);
 
 ---
 
-Готов продолжить с блока **4.8 — Поддержка CDC (Change Data Capture)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -6530,8 +6379,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **4.9 — Внешние процедуры и UDF-интеграция (Lua/WASM/C++)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -6617,8 +6464,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **4.10 — ETL-интеграция и внешние источники (S3, Parquet, CSV, XML)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -6703,10 +6548,6 @@ typedef struct {
 * `test_etl_s3_integration_mock_and_access_control`
 
 ---
-
-✅ Пакет **4. Интерфейсы и Интеграции** завершён.
-
-Готов перейти к следующему пакету — **5. BI, ML и OLAP**, начиная с блока **5.1 — Табличное хранилище для аналитики и агрегаций**. Напиши **"да"**.
 
 Вот следующая часть:
 
@@ -6797,8 +6638,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **5.2 — Механизм агрегатов и оконных функций** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -6883,8 +6722,6 @@ typedef struct {
 * `test_frame_boundaries_rows_vs_range`
 
 ---
-
-Готов продолжить с блока **5.3 — Материализованные представления и OLAP-кубы** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -6973,8 +6810,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **5.4 — Аудит данных и встроенные лог-функции** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -7055,8 +6890,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **5.5 — Интеграция ML: SQL-инференс и runtime ONNX/PyTorch** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -7136,10 +6969,6 @@ typedef struct {
 * `test_ml_acl_and_resource_limits`
 
 ---
-
-✅ Пакет **5. BI, ML и OLAP** завершён.
-
-Готов перейти к следующему пакету — **6. Безопасность**, начиная с блока **6.1 — RBAC / ABAC и политики доступа**. Напиши **"да"**.
 
 Вот следующая часть:
 
@@ -7228,8 +7057,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **6.2 — Защита на уровне строк (RLS)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -7314,8 +7141,6 @@ typedef struct {
 * `test_rls_access_denied_default_fallback`
 
 ---
-
-Готов продолжить с блока **6.3 — Защита на уровне колонок (CLS)** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -7407,8 +7232,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **6.4 — TLS / mTLS и защита соединений** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -7494,8 +7317,6 @@ typedef struct {
 * `test_tls_handshake_failure_and_logging`
 
 ---
-
-Готов продолжить с блока **6.5 — Политики доступа по колонкам и таблицам (Access Policy Engine)** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -7591,8 +7412,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **6.6 — Политики безопасности UDF и API вызовов** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -7682,10 +7501,6 @@ typedef struct {
 
 ---
 
-✅ Пакет **6. Безопасность** завершён.
-
-Готов перейти к следующему пакету — **7. Observability и DevOps**, начиная с блока **7.1 — Профилировщик памяти и нагрузки (Flamegraph / Timeline)**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -7770,8 +7585,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **7.2 — Интеграция с OpenTelemetry, Prometheus и трассировка запросов** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -7851,8 +7664,6 @@ typedef struct {
 * `test_trace_sampling_limits_and filters`
 
 ---
-
-Готов продолжить с блока **7.3 — Слой structured logging и экспорт логов (JSON / Binary / syslog)** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -7943,8 +7754,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **7.4 — Механизм алертов и событий мониторинга (Alertmanager совместимость)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -8032,10 +7841,6 @@ typedef struct {
 
 ---
 
-✅ Пакет **7. Observability и DevOps** завершён.
-
-Готов перейти к следующему пакету — **8. Производительность**, начиная с блока **8.1 — Векторное исполнение и pipeline-агрегация**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -8118,8 +7923,6 @@ typedef struct {
 * `test_vector_exec_fusion_optimizer`
 
 ---
-
-Готов продолжить с блока **8.2 — Адаптивные джоины и динамический выбор алгоритма** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -8208,8 +8011,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **8.3 — Кэширование планов и re-optimization на лету** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -8292,8 +8093,6 @@ typedef struct {
 * `test_plan_cache_isolation_per_role`
 
 ---
-
-Готов продолжить с блока **8.4 — Формат-ориентированное исполнение (Parquet, Arrow-aware)** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -8381,8 +8180,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **8.5 — SIMD-оптимизации и многопоточность в ядре** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -8463,8 +8260,6 @@ typedef bool (*task_fn_t)(void *);
 
 ---
 
-Готов продолжить с блока **8.6 — Zero-copy snapshot и clone таблиц** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -8544,8 +8339,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **8.7 — Режим критически низкой задержки (Critical <500нс)** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -8623,8 +8416,6 @@ typedef struct {
 * `test_latency_mode_conflict_with_normal_mode`
 
 ---
-
-Готов продолжить с блока **8.8 — Watchdog, limit-и и защита от перегрузок** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -8712,8 +8503,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **8.9 — Микроядерный аллокатор памяти и предвыделение** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -8800,8 +8589,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **8.10 — Timebox execution и ограничение времени выполнения** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -8881,8 +8668,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **8.11 — Расширяемый аллокатор и NUMA-aware размещение** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -8960,8 +8745,6 @@ typedef enum {
 * `test_numa_rebalance_performance_gain`
 
 ---
-
-Готов продолжить с блока **8.12 — Sandboxed выполнение Lua / WASM / C UDF** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -9044,9 +8827,6 @@ typedef value_t (*udf_c_fn_t)(json_t *args);
 
 ---
 
-Готов продолжить с блока **8.13 — Постоянные кэши выражений и адаптивный reuse** — напиши **"да"**.
-
-
 Вот следующая часть:
 
 ---
@@ -9124,8 +8904,6 @@ typedef struct {
 * `test_expr_cache_determinism_enforcement`
 
 ---
-
-Готов продолжить с блока **8.14 — SIMD runtime и операции над векторами** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -9217,10 +8995,6 @@ typedef enum {
 
 ---
 
-✅ Пакет **8. Производительность** завершён.
-
-Готов перейти к следующему пакету — **9. Расширяемость**, начиная с блока **9.1 — Поддержка C/C++/WASM модулей и UDF/UDAF API**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -9301,8 +9075,6 @@ typedef struct {
 * `test_udf_module_unload_and_cleanup`
 
 ---
-
-Готов продолжить с блока **9.2 — Расширения через dlopen / LoadLibrary и sandbox API** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -9386,8 +9158,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **9.3 — Встроенные расширения: планировщик, парсеры, функции, протоколы** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -9468,8 +9238,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **9.4 — Поддержка PostgreSQL Wire Protocol и собственный бинарный протокол** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -9547,8 +9315,6 @@ typedef enum {
 * `test_wire_security_tls_handshake`
 
 ---
-
-Готов продолжить с блока **9.5 — DSL / UDF сценарии и расширения для ERP/ETL** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -9634,10 +9400,6 @@ typedef struct {
 
 ---
 
-✅ Пакет **9. Расширяемость** завершён.
-
-Готов перейти к следующему пакету — **10. Тестируемость и структура проекта**, начиная с блока **10.1 — Unit-тесты и тестовый движок**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -9715,8 +9477,6 @@ typedef struct {
 * `test_catalog_table_create_drop`
 
 ---
-
-Готов продолжить с блока **10.2 — Stress, Soak, Leak-тесты и CI-интеграция** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -9797,8 +9557,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **10.3 — Расширяемая среда тестирования для модулей и расширений** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -9876,8 +9634,6 @@ typedef struct {
 * `ext_test_ext_context_reload_and_restore`
 
 ---
-
-Готов продолжить с блока **10.4 — Timebox, fault-injection и тесты таймаутов/сбоев** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -9959,8 +9715,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **10.5 — Интеграционные тесты и тестовые snapshot-сценарии** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -10038,8 +9792,6 @@ typedef struct {
 * `integration_test_schema_alteration_and_rollback`
 
 ---
-
-Готов продолжить с финальным блоком **10.6 — Fuzzing, Mutation, Crash-тесты и покрытие** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -10126,10 +9878,6 @@ typedef const char *(*fuzz_input_fn)(void);
 
 ---
 
-✅ Пакет **10. Тестируемость и структура проекта** завершён.
-
-Готов перейти к следующему пакету — **11. Безопасность**, начиная с блока **11.1 — RBAC/ABAC, политики доступа и шифрование данных**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -10214,8 +9962,6 @@ typedef struct {
 * `test_access_denied_on_column_mask`
 
 ---
-
-Готов продолжить с блока **11.2 — TLS/mTLS, сертификаты, передача и защита каналов** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -10304,8 +10050,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **11.3 — Row-level / column-level security и маскирование** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -10384,8 +10128,6 @@ typedef struct {
 * `test_row_filter_context_dependency`
 
 ---
-
-Готов продолжить с блока **11.4 — Защита от SQL-инъекций, sandbox, UDF isolation** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -10472,8 +10214,6 @@ typedef struct {
 * `test_sql_normalizer_whitespace_reduction`
 
 ---
-
-Готов продолжить с блока **11.5 — Аудит, immutable-логи, контроль DML/DDL** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -10562,10 +10302,6 @@ typedef struct {
 
 ---
 
-✅ Пакет **11. Безопасность** завершён.
-
-Готов перейти к следующему пакету — **12. Интерфейсы и Протоколы**, начиная с блока **12.1 — SQL API, JDBC/ODBC, CLI и WebSocket**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -10649,8 +10385,6 @@ typedef struct {
 * `test_sql_api_invalid_syntax_handling`
 
 ---
-
-Готов продолжить с блока **12.2 — REST, gRPC, GraphQL и OpenAPI интерфейсы** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -10739,8 +10473,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **12.3 — CDC, Changefeed и streaming-интерфейсы Kafka/Pulsar/Redis** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -10827,8 +10559,6 @@ typedef struct {
 * `test_cdc_error_handling_in_pulsar`
 
 ---
-
-Готов продолжить с блока **12.4 — Поддержка внешних источников (CSV, JSON, Parquet, S3)** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -10923,8 +10653,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **12.5 — Webhook и вызовы внешних процедур** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -11012,10 +10740,6 @@ typedef struct {
 
 ---
 
-✅ Пакет **12. Интерфейсы и Протоколы** завершён.
-
-Готов перейти к следующему пакету — **13. BI и аналитика**, начиная с блока **13.1 — Views, Materialized Views, Adaptive Aggregates**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -11099,8 +10823,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **13.2 — Поддержка ROLLUP, CUBE, OLAP функций и precomputed кубов** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -11180,8 +10902,6 @@ typedef struct {
 * `test_cube_fallback_on_data_mismatch`
 
 ---
-
-Готов продолжить с блока **13.3 — Встроенные аналитические функции: rank, percentiles, lag/lead** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -11268,8 +10988,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **13.4 — Сценарии кластеризации, корреляции, предсказания, ML API** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -11355,8 +11073,6 @@ typedef struct {
 
 ---
 
-Готов перейти к последнему блоку этого пакета — **13.5 — Расширяемые прогнозные сценарии и оконные UDF/DSL** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -11435,10 +11151,6 @@ typedef struct {
 * `test_forecast_access_control_scope`
 
 ---
-
-✅ Пакет **13. BI и аналитика** завершён.
-
-Готов перейти к следующему пакету — **14. Распределённость и Масштабирование**, начиная с блока **14.1 — Распределённый планировщик запросов и координация**. Напиши **"да"**.
 
 Вот следующая часть:
 
@@ -11525,8 +11237,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **14.2 — Шардинг, партиционирование, auto-rebalance, data locality** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -11605,8 +11315,6 @@ typedef struct {
 * `test_shard_migration_consistency_check`
 
 ---
-
-Готов продолжить с блока **14.3 — Многонодовая репликация: active-active, Raft, failover** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -11687,8 +11395,6 @@ typedef struct {
 * `test_replication_lag_monitoring_metrics`
 
 ---
-
-Готов продолжить с блока **14.4 — Распределённая каталогизация и глобальные транзакции** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -11775,8 +11481,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **14.5 — Query shipping, remote exec, federated joins** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -11862,10 +11566,6 @@ typedef struct {
 
 ---
 
-✅ Пакет **14. Распределённость и Масштабирование** завершён.
-
-Готов перейти к следующему пакету — **15. Версионность, откаты и эволюция схем**, начиная с блока **15.1 — SYSTEM VERSIONED таблицы, AS OF и temporal-запросы**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -11950,8 +11650,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **15.2 — Механизм откатов, snapshot restore, clone table** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -12031,8 +11729,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **15.3 — Эволюция схем, online-ALTER, live reload, rollback схемы** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -12111,10 +11807,6 @@ typedef struct {
 * `test_schema_version_history_listing`
 
 ---
-
-✅ Пакет **15. Версионность, откаты и эволюция схем** завершён.
-
-Готов перейти к следующему пакету — **16. Управление ресурсами и изоляция**, начиная с блока **16.1 — CPU, memory, IOPS квоты и resource limits per session**. Напиши **"да"**.
 
 Вот следующая часть:
 
@@ -12196,8 +11888,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **16.2 — Изоляция запросов, конкуренция, адаптивное планирование** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -12276,8 +11966,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **16.3 — NUMA-awareness, CPU-affinity, memory binding** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -12355,8 +12043,6 @@ typedef struct {
 * `test_numa_advice_for_parallel_query`
 
 ---
-
-Готов продолжить с блока **16.4 — Query sandboxing, isolation levels and query jail** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -12444,10 +12130,6 @@ typedef struct {
 
 ---
 
-✅ Пакет **16. Управление ресурсами и изоляция** завершён.
-
-Готов перейти к следующему пакету — **17. Планировщик задач и событий**, начиная с блока **17.1 — SQL-задачи по расписанию, cron, watch**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -12533,8 +12215,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **17.2 — Поддержка async SQL, отложенного и фонового исполнения** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -12619,8 +12299,6 @@ typedef struct {
 * `test_task_failure_notification_alert`
 
 ---
-
-Готов продолжить с блока **17.2 — Поддержка async SQL, отложенного и фонового исполнения** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -12708,10 +12386,6 @@ typedef struct {
 
 ---
 
-✅ Пакет **17. Планировщик задач и событий** завершён.
-
-Готов перейти к следующему пакету — **18. Временные окна и TimeSeries аналитика**, начиная с блока **18.1 — TimeSeries типы, gap-filling, downsampling, retention**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -12794,8 +12468,6 @@ typedef struct {
 * `test_query_timeseries_range_filtering`
 
 ---
-
-Готов продолжить с блока **18.2 — Оконные агрегации и аномалии во временных рядах** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -12881,10 +12553,6 @@ typedef struct {
 
 ---
 
-✅ Пакет **18. Временные окна и TimeSeries аналитика** завершён.
-
-Готов перейти к следующему пакету — **19. Форматы и обработка данных**, начиная с блока **19.1 — CSV, JSON, XML, Parquet, Excel ingestion**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -12964,8 +12632,6 @@ typedef struct {
 * `test_ingest_error_handling_and_report`
 
 ---
-
-Готов продолжить с блока **19.2 — Экспорт данных: CSV, JSON, Parquet, streaming** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -13052,8 +12718,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **19.3 — Преобразование и нормализация данных при импорте/экспорте** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -13138,8 +12802,6 @@ typedef struct {
 * `test_enrich_row_with_import_context`
 
 ---
-
-Готов перейти к следующему блоку — **19.4 — Преобразование форматов, сериализация и конвертеры**. Напиши **"да"**.
 
 Вот следующая часть:
 
@@ -13231,8 +12893,6 @@ typedef struct {
 
 ---
 
-Готов перейти к последнему блоку пакета — **19.5 — Обогащение, фильтрация и расчётные поля в real-time**. Напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -13319,10 +12979,6 @@ typedef struct {
 * `test_udf_enrichment_sandboxed_execution`
 
 ---
-
-✅ Пакет **19. Форматы и обработка данных** завершён.
-
-Готов перейти к следующему (финальному) пакету — **20. Внутренняя структура и ядро**, начиная с блока **20.1 — Архитектура ядра: Parser → Planner → Optimizer → Executor → Storage**. Напиши **"да"**.
 
 Вот следующая часть:
 
@@ -13421,8 +13077,6 @@ typedef struct {
 * `test_storage_fetch_from_columnstore`
 
 ---
-
-Готов продолжить с блока **20.2 — Внутренние структуры: AST, IR, execution plan, symbol table** — напиши **"да"**.
 
 Вот следующая часть:
 
@@ -13526,8 +13180,6 @@ typedef struct {
 
 ---
 
-Готов продолжить с блока **20.3 — Ядро исполнения: vectorized executor, pipelines, threads** — напиши **"да"**.
-
 Вот следующая часть:
 
 ---
@@ -13614,9 +13266,7 @@ typedef struct {
 
 ---
 
-Готов перейти к финальному блоку **20.4 — Ядро хранилища: row-store, column-store, JSON-store и индексы** — напиши **"да"**.
-
-Вот финальная часть:
+Вот следующая часть:
 
 ---
 
@@ -13707,8 +13357,3 @@ typedef struct {
 * `test_eviction_policy_under_load`
 
 ---
-
-✅ Пакет **20. Внутренняя структура и ядро** завершён.
-✅ Все **374 архитектурных блока** описаны в формате `block_functions`.
-
-Если нужно, могу собрать `block_functions.json` или подготовить Markdown-архив всех блоков.
