--- a/block_functions/0x00.md
+++ b/block_functions/0x00.md
@@ -3085,9 +3085,7 @@ typedef struct {
 
 ---
 
-Готов продолжить с последним блоком пакета 1: **1.26 — Поддержка layout-aware execution** — напиши **"да"**.
-
-Вот последняя часть пакета 1:
+Вот следующая часть:
 
 ---
 
