--- a/Requirements/0x01.md
+++ b/Requirements/0x01.md
@@ -1,1 +1,147 @@
+Вот сводка ключевых требований к вашей промышленной In-Memory реляционной СУБД уровня SAP HANA+, которые мы обсуждали и согласовали:
+
+---
+
+# Основные требования к In-Memory реляционной СУБД
+
+## 1. Архитектура и Хранилище
+
+* Полностью **in-memory** с fallback на NVMe/SSD (tiered storage).
+* Гибридное хранение: row-store, column-store, JSON store.
+* NUMA-aware allocation, CPU-affinity, cache coloring, prefetch.
+* Масштабирование: sharding, partitioning, auto-rebalancing, distributed planner.
+* Индексы: B+ tree, hash, bitmap, inverted, adaptive indexing.
+* Сжатие: dictionary, RLE, delta, frame-of-reference, vectorized decompression.
+* Page Cache / Buffer Pool с LRU, ARC, dirty tracking, preload pages.
+* WAL: log compaction, параллельные WAL writers, diff-based snapshot.
+* Поддержка горячих/холодных данных, auto-tiering, TTL, eviction.
+* Внедрить автоматическое rebalancing данных на уровне физического и логического partitioning.
+* Реализовать advanced NUMA-aware memory reclaim (по GC метрикам).
+* Добавить поддержку SAP HANA-like delta merge между row-store и column-store.
+
+## 2. Транзакционность и Надёжность
+
+* Полный MVCC (compressed chains) + snapshot isolation.
+* ACID-совместимость + serializable fallback.
+* WAL + Snapshot + Recovery: instant crash recovery.
+* Уровни изоляции: RC, RR, SI, SERIALIZABLE.
+* Фоновая garbage collection (vacuum).
+* Failover, watchdog, multi-node recovery.
+* Active-active / active-passive репликации, consensus (Raft/Paxos).
+* Расширить механизм multi-master consensus с conflict resolution.
+* Поддержка zero-downtime failover.
+* Распределённый WAL с quorum.
+
+## 3. SQL и Языки
+
+* ANSI SQL:2011+, включая оконные функции, recursive CTE, LATERAL, MERGE.
+* Расширения: JSON функции, FILTER, агрегаты, аналитика, MATCH\_RECOGNIZE.
+* Оптимизаторы: cost-based, rule-based, adaptive (реоптимизация, feedback loops).
+* Собственный DSL для транзакций (ABAP/PL/SQL стиль).
+* UDF/UDAF: Lua, WASM, JS, C/C++ (sandbox).
+* PL/SQL-подобный язык: процедуры, триггеры, exec hooks.
+* Встроенные процедуры: временные окна, прогнозирование, кластеризация.
+* Поддержка Graph SQL.
+* Расширения: temporal tables VALID FROM/TO, bitemporal support.
+* Встроенный JIT-компилятор SQL выражений.
+
+## 4. Интерфейсы и Интеграции
+
+* Поддержка JDBC, ODBC, CLI, gRPC, WebSocket, REST, GraphQL, OpenAPI.
+* CDC и стриминг: Kafka, Pulsar, Debezium, Redis Streams, Changefeed.
+* Batch ingest: CSV, Excel, Parquet, JSON, XML, S3.
+* Webhooks, внешние процедуры, async event processors.
+* Интеграция с ERP/BI, BPMN, DSL/UDF сценарии.
+* Интеграция с SAP BTP, OData, и native SAP ERP.
+* Поддержка cloud-native API (AWS Lambda, GCP Pub/Sub).
+* Поддержка CDC через Outbox pattern.
+
+## 5. BI, ML и OLAP
+
+* Поддержка HTAP: mixed workload, columnar analytics в OLTP.
+* BI: views, materialized views/cubes, ROLLUP, CUBE, adaptive aggregates.
+* Time Series: native types, gap-fill, downsampling, retention.
+* ML: API и runtime для ONNX, Tensorflow, PyTorch, SQL-инференс.
+* Встроенные функции: rank, percentiles, clustering, forecasting, correlation.
+* Поддержка graph analytics (PageRank, shortest path).
+* Встроенные ML-модели (AutoML, классификация, регрессия).
+* Генерация explainable AI / feature importance в SQL.
+
+## 6. Безопасность
+
+* RBAC/ABAC, row-level/column-level security.
+* TLS/mTLS/JWT, TDE, forward secrecy.
+* ACL: сетевые правила, scoped tokens.
+* Аудит: DML/DDL, immutable chainable logs.
+* Access Policy Engine, predicate policies.
+* Защита от SQL-инъекций, sandbox Lua/WASM.
+* Поддержка label-based security (например, row security по классификации данных).
+* FIPS-совместимое шифрование.
+* Полноценная auditing pipeline с tamper-proof журналами.
+
+## 7. Observability и DevOps
+
+* Метрики: Prometheus, OpenMetrics, IOPS, latency nanoscale.
+* Трейсинг: OpenTelemetry, Jaeger, Zipkin, query tracing, perf integration.
+* Встроенный профилировщик: Flamegraph, execution timeline viewer.
+* Structured logging: stderr, syslog, JSON, binary.
+* Fuzzing: libFuzzer, AFL++, ASAN/TSAN/MSAN.
+* Fault injection, chaos testing, crash recovery.
+* CI/CD: GitHub Actions, Ninja, mutation testing.
+* Schema evolution: online ALTER, instant rollback, live reload.
+* Интеграция с Grafana dashboards по шаблонам.
+* Встроенная query flamegraph visualisation в UI.
+* Automatic alert tuning (machine learning based thresholds).
+
+## 8. Производительность
+
+* Latency OLTP: <1 мс, critical query: <500 нс.
+* Поддержка 20M+ транзакций в день, 9M записей в день на филиал.
+* Vectorized execution, parallel pipelines, streaming aggregator.
+* Adaptive joins: hash, merge, index-nested loop, grace hash.
+* Runtime re-optimization, plan caching, selectivity feedback.
+* PAX / Apache Arrow layouts, format-aware execution.
+* Copy-on-write snapshots, instant backup/restore, clone tables.
+* JIT для выражений в executor.
+* Предсказательная оптимизация плана на основе статистики прошлых выполнений.
+* Support for “late materialization” в column-store.
+
+## 9. Расширяемость
+
+* UDF/UDAF и расширения на C/C++ в sandbox.
+* Внешние модули: dlopen / LoadLibrary.
+* Собственный бинарный SQL-протокол, поддержка PostgreSQL wire protocol.
+* REST, gRPC, JSON\:API.
+* DSL/UDF для ERP, ETL генерация, планировщик задач.
+* IDE-like DSL расширения с inline-debug.
+* Dynamic module loading/unloading без перезапуска.
+* Self-describing UDF с GraphQL introspection.
+
+## 10. Тестируемость и структура проекта
+
+* Архитектура: Parser → Planner → Optimizer → Executor → Storage.
+* Модули ≤ 500 строк, internal/ для скрытых реализаций.
+* Тесты: unit, integration, fuzz, stress, soak, mutation, coverage.
+* Стандарты: snake\_case, doxygen, opaque структуры, context-based API.
+* Логирование: log\_event(op, time\_ns, size).
+* Мониторинг: CLI, REST API, веб-панель, Alertmanager.
+* Mutation testing с coverage-порогами.
+* Real-time schema contract validation.
+* Эмулятор production-like нагрузки (из реальных WAL).
+
+## 11. Дополнительно
+
+* Форматы: UTF-8, числовые, JSON, даты, timestamps с наносекундной точностью.
+* Поддержка SYSTEM VERSIONED таблиц, AS OF запросов.
+* Ограничения CPU, память, IOPS per session (multi-tenant).
+* Инструменты миграции, совместимость с PostgreSQL/Oracle.
+* Локализация: ICU collation, языковые функции.
+* Интерфейс администратора: web UI + CLI + REST.
+* Интернационализация с ICU MessageFormat.
+* Встроенные механизмы миграции на уровне схем.
+* Web-based live schema designer/editor.
+
+---
+
+Если нужно, могу подготовить структурированную документацию по каждому пункту или блокам архитектуры.
 
